test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_items/src/struct_impl_method.sw
library;

struct S {
    field: u8,
}

impl S {
    #[test(invalid)]
    #[payable(invalid)]
    //! Invalid inner comment.
    #[deprecated(invalid)]
    #[fallback(invalid)]
    fn method(self) {}
}
